Change wrapper permissions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,9 @@ jobs:
           java-version: 17
           distribution: temurin
 
+      - name: Change wrapper permissions
+        run: chmod +x ./gradlew
+
       #start emulator and run instrumented tests
       - name: Enable KVM
         run: |
